--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
   },
   "rules": {
     "@typescript-eslint/no-var-requires": 0,
+    "no-param-reassign": "off",
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": [
       "error",
