--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "request-swish",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Request client utilizing the swish protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/adonisv79/request-swish#readme",
   "dependencies": {
-    "swish-protocol": "2.0.1"
+    "request": "2.88.0",
+    "request-promise": "4.2.4",
+    "swish-protocol": "^2.2.1"
   },
   "devDependencies": {
     "@types/jest": "25.1.4",
@@ -42,8 +44,6 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "jest": "24.8.0",
-    "request": "2.88.0",
-    "request-promise": "4.2.4",
     "ts-jest": "25.2.1",
     "typescript": "3.8.3"
   }
