--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,34 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "lib": [ "es2015" ],
-    "strict": true,
+    // Source Maps
+    "sourceRoot": "src",
+    // Project Options
     "declaration": true,
+    "lib": [ "es6" ],
+    "module": "commonjs",
+    "outDir": "dist",
     "removeComments": true,
-    "preserveConstEnums": true,
+    "rootDir": ".",
+    "sourceMap": true,
+    "target": "es6",
+    // Module Resolution
     "esModuleInterop": true,
     "moduleResolution": "node",
+    // Strict Checks
     "noImplicitAny": true,
-    "outDir": "dist",
-    "rootDir": ".",
-    "sourceRoot": "src",
-    "sourceMap": true,
-    "noUnusedLocals": false,
+    "noImplicitThis": true,
+    "strict": true,
+    // Linter checks
+    "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    // Advanced Config
+    "preserveConstEnums": false,
+    "traceResolution": false,
     "forceConsistentCasingInFileNames": true,
-    "traceResolution": false
   },
   "include": [ "src/**/*", "tools/**/*" ],
-  "exclude": [
-    "node_modules",
-    "coverage",
-    "**/*.spec.ts"
-  ]
+  "exclude": [ "node_modules", "coverage", "**/*.spec.ts", "**/*.test.ts" ]
 }
