--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "request-swish",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "Request client utilizing the swish protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -9,7 +9,13 @@
   ],
   "scripts": {
     "dist:client": "node dist/tools/test-client",
-    "test": "jest"
+    "audit": "npm audit",
+    "lint": "eslint \"src/**/*.ts\" \"tools/**/*.ts\"",
+    "snyk": "snyk test",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -27,24 +33,19 @@
   },
   "homepage": "https://github.com/adonisv79/request-swish#readme",
   "dependencies": {
-    "request": "2.88.0",
-    "request-promise": "4.2.4",
-    "swish-protocol": "^2.2.1"
+    "axios": "0.21.1",
+    "swish-protocol": "2.4.2"
   },
   "devDependencies": {
-    "@types/jest": "25.1.4",
-    "@types/node": "13.9.5",
-    "@types/request": "^2.48.4",
-    "@types/request-promise": "^4.1.46",
-    "@typescript-eslint/eslint-plugin": "2.25.0",
-    "@typescript-eslint/parser": "2.25.0",
-    "eslint": "6.1.0",
-    "eslint-config-airbnb": "18.1.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.19.0",
-    "jest": "24.8.0",
-    "ts-jest": "25.2.1",
-    "typescript": "3.8.3"
+    "@types/jest": "26.0.22",
+    "@types/node": "14.14.37",
+    "@typescript-eslint/eslint-plugin": "4.20.0",
+    "@typescript-eslint/parser": "4.20.0",
+    "eslint": "7.23.0",
+    "eslint-config-airbnb-typescript": "12.3.1",
+    "eslint-plugin-import": "2.22.0",
+    "jest": "26.6.3",
+    "ts-jest": "26.5.4",
+    "typescript": "4.2.3"
   }
 }
