--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: node_js
 node_js: 14.15.3
 script:
 - npm run audit
+- npm run snyk
 - npm run lint
 - npm run test
 after_success: npm run coveralls
