--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "request-swish",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Request client utilizing the swish protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -42,10 +42,12 @@
     "@types/node": "14.14.37",
     "@typescript-eslint/eslint-plugin": "4.20.0",
     "@typescript-eslint/parser": "4.20.0",
+    "coveralls": "3.1.0",
     "eslint": "7.23.0",
     "eslint-config-airbnb-typescript": "12.3.1",
     "eslint-plugin-import": "2.22.0",
     "jest": "26.6.3",
+    "snyk": "1.522.0",
     "ts-jest": "26.5.4",
     "typescript": "4.2.3"
   }
